# viceroy

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
games/: rps.h  solvable_game.h  util.h
main/: main.cc
solver/: main.cc
